# caetusOS

./: .gitignore  README.md  fly.toml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
backend/: .env  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: assets.py  auth.py  comandos.py  conhecimento.py  empresas.py  historico.py  ia.py  identidade.py  infraestrutura.py  memoria.py  projetos.py
backend/app/configuracao/: __init__.py
backend/app/dominio/: erros.py
backend/app/dominio/modelos/: __init__.py  asset.py  documento_conhecimento.py  empresa.py  execucao.py  ia_execucao.py  ia_health.py  identidade_empresa.py  memoria_item.py  projeto.py  usuario.py
backend/app/eventos/: publisher.py
backend/app/executor/: base.py  comando.py  pipeline.py  resultado.py  tipos.py
backend/app/executor/executores/: base.py  skill.py
backend/app/habilidades/: base.py  registro.py
backend/app/habilidades/conteudo/: criar_post.py  pipeline_post.py
backend/app/ia/: catalogo.py  categorias.py  fallback_log.py  metricas.py  missoes.py  roteador.py
backend/app/ia/context_builder/: builder.py  politicas.py
backend/app/ia/health/: __init__.py  catalogo_urls.py  classificador.py  repositorio.py  (+2 more)
backend/app/servicos/: asset_servico.py  auth_servico.py  conhecimento_servico.py  empresa_servico.py  identidade_servico.py  memoria_servico.py  projeto_servico.py  templates_conhecimento.py
backend/app/templates/: README.md
(+146 files in other folders)
